eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artvortex-api-deployment
  labels:
    app: artvortex-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: artvortex-api
  template:
    metadata:
      labels:
        app: artvortex-api
    spec:
      containers:
      - name: artvortex-api
        image: 031485421365.dkr.ecr.ap-southeast-2.amazonaws.com/artvortex:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
