eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artvortex-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules: 
  - host: "api.meleeq.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: artvortex-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.meleeq.net
    secretName: artvortex-api-cert
